# cn-usurobor

./: AUDIT.md  CHANGELOG.md  PLAN.md  README.md  RELEASE.md  cn.json  deploy.sh  install.sh  package.json  setup.sh
.github/workflows/: ci.yml
cli/: index.js
docs/: ARCHITECTURE.md  CN-WHITEPAPER.md  DOJO.md  GLOSSARY.md  README.md
docs/alpha/: AGENT-RUNTIME.md  COGNITIVE-SUBSTRATE.md  RUNTIME-CONTRACT-v3.10.0.md  SCHEDULER-v3.7.0.md
docs/beta/: DOCUMENTATION-SYSTEM.md  GLOSSARY.md  LINEAGE.md
docs/checklists/: ocaml.md
docs/design/: ACTOR-MODEL-DESIGN.md  AGENT-MODEL.md  AGENT-RUNTIME-v3.md  AGENT-RUNTIME.md  AGILE-PROCESS.md  AUDIT-2026-02-22.md  AUDIT.md  CAA-v1.md  CAR-implementation-plan.md  CAR-v3.4.md  CLI.md  CN-MANIFESTO.md  CN-WHITEPAPER.md  INBOX-ARCHITECTURE.md  LOGGING.md  MANIFESTO.md  PLAN-v3.3.md  PROTOCOL.md  SECURITY-MODEL.md
docs/explanation/: CREDITS.md
docs/foundations/: COHERENCE-SYSTEM.md
docs/gamma/: CDD.md  ENGINEERING-LEVELS.md
docs/method/: DOCUMENTATION-SYSTEM.md
docs/β/: ARCHITECTURE.md
mindsets/: COHERENCE.md  ENGINEERING.md  MEMES.md  OPERATIONS.md  WISDOM.md
skills/: README.md
skills/communicating/: CA-CONDUCT.md  SKILL.md
skills/hello-world/: SKILL.md
skills/human-interaction/: SKILL.md
skills/inbox/: SKILL.md
skills/reflect/: SKILL.md
skills/review/: SKILL.md
skills/self-cohere/: SKILL.md  kata.md
spec/: AGENTS.md  TOOLS.md  WHITEPAPER-GH-CN.md
src/cmd/: dune  (+22 more)
state/: peers.json
test/: cn.test.js
tools/: README.md
tools/src/cn/: cn.ml  cn_agent.ml  cn_io.ml  cn_lib.ml  cn_system.ml  dune
(+59 files in other folders)
